added get user detail feature
