# internal/account/dto/user_detail.go
@@ -1,0 +1,8 @@
+package dto
+
+import "github.com/google/uuid"
+
+type UserDetail struct {
+	ID       uuid.UUID `json:"id"`
+	Username string    `json:"username"`
+}
